2009-10-22  Marek Safar  <marek.safar@gmail.com>

	* dynamic.cs, expression.cs: Pass logical binary flag to dynamic
	resolver.

2009-10-22  Marek Safar  <marek.safar@gmail.com>

	* dynamic.cs, ecore.cs: Dynamic invocation with void return type.

2009-10-21  Marek Safar  <marek.safar@gmail.com>

	* dynamic.cs, convert.cs, expression.cs, ecore.cs: Wrap array index
	conversion.

2009-10-21  Marek Safar  <marek.safar@gmail.com>

	* typemanager.cs, dynamic.cs, expression.cs: Don't resolve runtime
	binder flags.

2009-10-20  Marek Safar  <marek.safar@gmail.com>

	* argument.cs, dynamic.cs, expression.cs: Latest API update.

2009-10-19  Marek Safar  <marek.safar@gmail.com>

	* typemanager.cs, expression.cs: Dynamic array initializer.

2009-10-16  Marek Safar  <marek.safar@gmail.com>

	* typemanager.cs, rootcontext.cs: Clear -nostdlib flag when object
	is imported.

2009-10-16  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #493523, #507067
	* convert.cs, nullable.cs, expression.cs: Do implicit and explicit
	standard nullable conversion using underlying standard conversion
	and not full conversion.

2009-10-15  Marek Safar  <marek.safar@gmail.com>

	* dynamic.cs, expression.cs, ecore.cs, delegate.cs: Check return
	type in VerifyArgumentsCompat.

2009-10-15  Marek Safar  <marek.safar@gmail.com>

	* nullable.cs, expression.cs, statement.cs, namespace.cs, ecore.cs:
	Reject variable used with type arguments.

2009-10-14  Marek Safar  <marek.safar@gmail.com>

	* argument.cs, dynamic.cs, assign.cs, expression.cs, ecore.cs:
	Implement dynamic expressions assignment.

2009-10-14  Marek Safar  <marek.safar@gmail.com>

	* expression.cs: Build underlying expression when resolving unary
	mutators.

2009-10-14  Marek Safar  <marek.safar@gmail.com>

	* expression.cs: Emit enum array initializer using binary blob.

2009-10-08  Marek Safar  <marek.safar@gmail.com>

	* typemanager.cs, constant.cs: Optimize decimal constants which fit
	to long range.
